# pattern4gpu

./: CMakeLists.txt  README.md  README.txt  build_cmd.txt  build_kokkos.txt  samples.common.cmake
ctest/: launch_test.sh.in  test_list.json
src/: AcceleratorUtils.h  CMakeLists.txt  P4GPUTimer.h  Pattern4GPU.axl  Pattern4GPU.config  Pattern4GPU4Kokkos.cc  Pattern4GPU4Kokkos.h  Pattern4GPUBenchCartesian.cc  Pattern4GPUCartesian.cc  Pattern4GPUComputeAndPrintError.cc  Pattern4GPUEnvOrder.cc  Pattern4GPUErrorHandler.h  Pattern4GPUModule.cc  Pattern4GPUModule.h  Pattern4GPUMultiEnv.cc  Pattern4GPUOptions.h  Pattern4GPUTestCartesian.cc  Pattern4GPUUtils.h  Pattern4GPUcomputeCqsAndVector.cc  Pattern4GPUupdateTensor.cc  Pattern4GPUupdateVectorFromTensor.cc  README.txt  SentinelArray.h  ViewInDir.h  main.cc
src/accenv/: AccEnvDefault.axl  AccEnvDefaultOptions.h  AccEnvDefaultService.cc  AccEnvDefaultService.h  AcceleratorEvent.cc  AcceleratorEvent.h  AcceleratorUtils.h  BufAddrMng.h  IAccEnv.h  MultiEnvUtils.h
src/cartesian/: CartCellDirectionMng.h  CartConnectivityCellFaceNode.h  CartFaceDirectionMng.h  CartItemEnumeratorT.h  CartItemGroup.h  CartNeighCells.h  CartNodeDirectionMng.h  CartTypes.h  CartesianMeshProperties.h  CartesianNumberingT.h  NumberingConverterT.h
src/geomenv/: GeomEnv.axl  GeomEnvModule.cc  GeomEnvModule.h
src/msgpass/: ComputeAndSync.h  ComputeMatAndSync.h  GlobalSynchronize.cc  GlobalSynchronizeDevQueues.cc  GlobalSynchronizeDevThr.cc  GlobalSynchronizeQueue.cc  GlobalSynchronizeQueueEvent.cc  GlobalSynchronizeQueueEventD.cc  IncompleteGlobalSynchronizeQueue.cc  MeshVariableSynchronizerList.cc  MeshVariableSynchronizerList.h  MultiMatSynchronize.cc  PackTransfer.cc  PackTransfer.h  SyncBuffers.cc  SyncBuffers.h  SyncItems.cc  SyncItems.h  VarSyncMng.cc  VarSyncMng.h  VarSyncMngOptions.h
tests/: README.txt
tests/p4gpu_bench_cartesian/: BenchCartesian10x10x10.arc  BenchCartesian64x64x64.arc
tests/p4gpu_cart_vol/: CartVol100x100x100.arc  CartVol10x8x5.arc
tests/p4gpu_compute_cqs/: ComputeCqs100x100x100.arc  ComputeCqs100x100x100Ori.arc  ComputeCqs100x100x100V1.arc  ComputeCqs100x100x100V2.arc  ComputeCqs100x100x100_kokkos.arc  ComputeCqs10x10x10.arc  ComputeCqs10x10x10_kokkos.arc  ComputeCqsNDiams150x150x150V2.arc
tests/p4gpu_compute_cqs_vector_tensor/: ComputeCqsVectorTensor100x100x100.arc  ComputeCqsVectorTensor10x10x10.arc
tests/p4gpu_cqs_vector_tensor/: CqsVectorTensor100x100x100.arc  CqsVectorTensor10x10x10.arc
tests/p4gpu_env_order/: Env10Order100x100x100.arc  Env8Order10x10x10.arc
tests/p4gpu_partial_global5/: PartialGlobal5100x100x100.arc  PartialGlobal5100x100x100Alter.arc  PartialGlobal5100x100x100_mmat.arc  PartialGlobal5100x100x100_mmat_mqueue.arc  PartialGlobal5100x100x100_ori.arc  PartialGlobal510x10x10.arc  PartialGlobal510x10x10Ori.arc  PartialGlobal510x10x10_mmat.arc  PartialGlobal510x10x10_mmat_mqueue.arc  PartialGlobal5Visu.arc
tests/p4gpu_partial_impure_only/: PartialImpureOnly10x10x10.arc  PartialImpureOnlyEnv10Mesh100x100x100.arc  PartialImpureOnlyEnv10Mesh100x100x100Ori.arc  PartialImpureOnlyVisu.arc
tests/p4gpu_partial_mean/: PartialMean10x10x10.arc  PartialMeanEnv10Mesh100x100x100.arc  PartialMeanEnv10Mesh100x100x100Ori.arc  PartialMeanVisu.arc
tests/p4gpu_partial_mean4/: PartialMean410x10x10.arc  PartialMean410x10x10_arcgpu_v2.arc  PartialMean410x10x10_arcgpu_v3.arc  PartialMean410x10x10_arcgpu_v4.arc  PartialMean410x10x10_arcgpu_v5.arc  PartialMean410x10x10_arcgpu_v6.arc  PartialMean4Env10Mesh100x100x100.arc  PartialMean4Env10Mesh100x100x100Ori.arc  PartialMean4Env10Mesh100x100x100_arcgpu_v3.arc  PartialMean4Env10Mesh100x100x100_arcgpu_v4.arc  PartialMean4Env10Mesh100x100x100_arcgpu_v5.arc  PartialMean4Env10Mesh100x100x100_arcgpu_v6.arc  PartialMean4Visu.arc
tests/p4gpu_partial_only/: PartialOnly10x10x10.arc  PartialOnly10x10x10_mmat.arc  PartialOnlyEnv10Mesh100x100x100.arc  PartialOnlyEnv10Mesh100x100x100Ori.arc  PartialOnlyVisu.arc
tests/p4gpu_print_error/: ComputePrintError100x100x100Ori.arc  ComputePrintError100x100x100V0.arc  ComputePrintError100x100x100V1.arc  ComputePrintError10x10x10.arc
tests/p4gpu_test_cartesian/: TestCartesian.arc
tests/p4gpu_update_tensor/: UpdateTensor.arc  UpdateTensor100x100x100.arc  UpdateTensor10x10x10.arc
tests/p4gpu_update_vector_from_tensor/: UpdateVectorFromTensor100x100x100.arc  UpdateVectorFromTensor10x10x10.arc
